Updated Database Link

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-ATLAS_URI = mongodb+srv://shahrez:tzjJJkF6bkn4QeLl@main.y0ggjop.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI = mongodb+srv://admin:ipEpayzmlAOB2Fah@maincluster.wx5fayx.mongodb.net/?retryWrites=true&w=majority&appName=MainCluster
