dashboard/ integrate email(attempt)

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 ATLAS_URI = mongodb+srv://admin:ipEpayzmlAOB2Fah@maincluster.wx5fayx.mongodb.net/?retryWrites=true&w=majority&appName=MainCluster
+SESSION_SECRET = 123kwkwiie393e9u32eu83r3f+@1uu123883sufia
