--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.22.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
