--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.22.0",
