--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
@@ -45,6 +46,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.21.3"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "react-router-dom": "^6.21.3",
+    "tailwindcss": "^3.4.1"
   }
 }
