--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.22.0",
