--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
+    "d3-array": "^3.2.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "react": "^18.2.0",
@@ -55,10 +56,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "react-router-dom": "^6.21.3",
-    "tailwindcss": "^3.4.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "tailwindcss": "^3.4.1"
   }
 }
